--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+
+DB_CONNECTION=mysql
+DB_HOST=us-cluster-east-01.k8s.cleardb.net
+DB_PORT=3306
+DB_DATABASE=heroku_628381e3ffc0543
+DB_USERNAME=bfe6f6cfecb819
+DB_PASSWORD=40b12351
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
