Clear config cache

--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-
 DB_CONNECTION=mysql
-DB_HOST=us-cluster-east-01.k8s.cleardb.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=heroku_628381e3ffc0543
-DB_USERNAME=bfe6f6cfecb819
-DB_PASSWORD=40b12351
+DB_DATABASE=event
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
