--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
     "private": true,
     "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
+    
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
@@ -15,7 +12,11 @@
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
     },
-    "script":{
+    "scripts":{
         "build": "vite build"
-    }
+    },
+    "dependencies": {
+     "vite": "^5.0"
+ 
+}
 }
