--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "private": true,
     "type": "module",
-    
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
@@ -10,9 +9,9 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "vite": "^5.4.6"
     },
-    "scripts":{
+    "scripts": {
         "heroku-postbuild": "npm run build",
         "build": "vite build"
     },
@@ -23,8 +22,6 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
- 
-}
+        "tailwindcss": "^3.1.0"
+    }
 }
