--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fedapay/fedapay-php": "^0.4.2",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
